kubernetes/vproapp/app-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-lb
spec:
  selector:
    app: vproapp
  ports:
    - protocol: TCP
      port: 8080
      targetPort: vproapp-port 
  type: LoadBalancer
