kubernetes/vproapp/db-CIP.yaml
apiVersion: v1
kind: Service
metadata:
  name: vprodb
spec:
  selector:
    app: vprodb
  ports:
  - port: 3306
    protocol: TCP
    targetPort: vprodb-port     
  type: ClusterIP
