kubernetes/vproapp/mem-CIP.yaml
apiVersion: v1
kind: Service
metadata:
  name: vpromc
spec:
  selector:
    app: vpromc
  ports:
    - name: dns
      port: 11211
      protocol: TCP
      targetPort: vpromc-port
  type: ClusterIP
