kubernetes/vproapp/nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  type: NodePort
  selector:
    app: vproapp
  ports:
    - port: 80
      targetPort: vproapp-port
      nodePort: 30007
