kubernetes/vproapp/rmq-CIP.yaml
apiVersion: v1
kind: Service
metadata:
  name: vpromq01
spec:
  selector:
    app: vpromq01
  ports:
    - name: dns
      port: 5672
      protocol: TCP
      targetPort: vpromq-port
  type: ClusterIP
